--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +12,7 @@
     <script src="https://kit.fontawesome.com/a06989dd3a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
+
 <body>
     <header class="header">
         <nav>
@@ -26,8 +28,10 @@
             <div>
                 <h3 class="banner-sub-title">Hi, I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                    Morning because as to society behaved moments.</p>
                 <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i></i> Contact</button>
             </div>
             <img src="images/hardy.png" alt="">
         </div>
@@ -35,7 +39,10 @@
     <main>
         <section class="about">
             <h3 class="section-title">About Me</h3>
-            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                procured exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata.</p>
             <div class="about-info-container">
                 <div class="about-info">
                     <p class="info-title">Name:</p>
@@ -63,22 +70,26 @@
                 <div class="skill">
                     <img src="images/icons/js.png" alt="">
                     <p class="skill-title">Vanilla JavaScript</p>
-                    <p class="skill-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor, possimus vel. Consectetur, esse nostrum? Atque?</p>
+                    <p class="skill-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor,
+                        possimus vel. Consectetur, esse nostrum? Atque?</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/react.png" alt="">
                     <p class="skill-title">React</p>
-                    <p class="skill-description">Iusto minus hic perferendis laudantium deserunt nisi animi. Maiores accusamus ullam inventore vel repellat aspernatur.</p>
+                    <p class="skill-description">Iusto minus hic perferendis laudantium deserunt nisi animi. Maiores
+                        accusamus ullam inventore vel repellat aspernatur.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/mongo.png" alt="">
                     <p class="skill-title">Mongodb</p>
-                    <p class="skill-description">Repudiandae quo fugiat sapiente rerum maxime enim adipisci. Pariatur, accusamus molestiae sint neque cum ducimus.</p>
+                    <p class="skill-description">Repudiandae quo fugiat sapiente rerum maxime enim adipisci. Pariatur,
+                        accusamus molestiae sint neque cum ducimus.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/nodejs.png" alt="">
                     <p class="skill-title">Node JS</p>
-                    <p class="skill-description">Veritatis explicabo earum nisi voluptatibus ducimus, fugit perferendis iure ea perspiciatis error quas provident quidem!</p>
+                    <p class="skill-description">Veritatis explicabo earum nisi voluptatibus ducimus, fugit perferendis
+                        iure ea perspiciatis error quas provident quidem!</p>
                 </div>
             </div>
         </section>
@@ -91,22 +102,25 @@
                     <div class="resume-item">
                         <h4 class="title">Master in Computer Engineering</h4>
                         <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h4 class="title">Master in Computer Engineering</h4>
                         <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h4 class="title">Master in Computer Engineering</h4>
                         <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                 </div>
                 <div>
@@ -114,22 +128,25 @@
                     <div class="resume-item">
                         <h4 class="title">Master in Computer Engineering</h4>
                         <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h4 class="title">Master in Computer Engineering</h4>
                         <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h4 class="title">Master in Computer Engineering</h4>
                         <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -142,7 +159,8 @@
             <div>
                 <h3 class="section-title">Let's Connect</h3>
                 <p class="section-description">
-                    Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+                    Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M
+                    ET, Monday through Friday.
                 </p>
                 <a href="">
                     <img src="images/icons/facebook.png" alt="">
@@ -159,7 +177,7 @@
                 <form action="">
                     <input type="text" name="" id="" placeholder="Your Name">
                     <input type="email" name="" id="" placeholder="Your Email">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Message" ></textarea>
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
                     <input class="btn-primary" type="submit" value="Submit">
                 </form>
             </div>
@@ -169,4 +187,5 @@
 
     </footer>
 </body>
+
 </html>
